# COVID_SIM

./: .gitignore  CMakeLists.txt  COVID_SIM_UI.pro  COVID_SIM_UI.sln  COVID_SIM_UI.vcxproj  COVID_SIM_UI.vcxproj.filters  COVID_sim_lib.vcxproj  COVID_sim_lib.vcxproj.filters  CUDA_functions.sln  CUDA_functions.vcxproj  CUDA_functions.vcxproj.filters  Configuration.cpp  Configuration.h  Configuration_list.md  Convert.cpp  Convert.h  Population_trackers.cpp  Population_trackers.h  README.md  RandomDevice.cpp  RandomDevice.h  cpp_corona_simulation.pro  cpp_corona_simulation.pro.user.84cc8ad  cpp_corona_simulation.sln  cpp_corona_simulation.vcxproj  cpp_corona_simulation.vcxproj.filters  cpp_corona_simulation_NQt.sln  cpp_corona_simulation_NQt.vcxproj  cpp_corona_simulation_NQt.vcxproj.filters  infection.cpp  infection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motion.cpp  motion.h  path_planning.cpp  path_planning.h  resource.h  (+7 more)
Include/: CUDA_functions.h  Defines.cuh  TypeDefs.h  kernels.cuh  matplotlibcpp.h
XCode/: COVID_SIM_UI.pro  install_tool_commands.bash
XCode/COVID_SIM.xcodeproj/: project.pbxproj
XCode/COVID_SIM.xcodeproj/project.xcworkspace/xcuserdata/nyuad.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
XCode/COVID_SIM.xcodeproj/xcshareddata/xcschemes/: COVID_SIM.xcscheme  COVID_SIM_CMD.xcscheme
XCode/COVID_SIM.xcodeproj/xcuserdata/nyuad.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XCode/COVID_SIM.xcodeproj/xcuserdata/nyuad.xcuserdatad/xcschemes/: COVID_SIM_debug.xcscheme  xcschememanagement.plist
XCode/COVID_SIM_UI.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
XCode/COVID_SIM_UI.xcodeproj/project.xcworkspace/xcuserdata/nyuad.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/COVID_SIM_UI.xcodeproj/xcshareddata/xcschemes/: COVID_SIM_UI.xcscheme
backups/approach_0/: pairwise_dist.cu  pairwise_dist.h
backups/approach_1 (not working)/: pairwise_dist.cu
backups/approach_4 (not working)/: pairwise_dist.cu
backups/backup_1/: pairwise_dist.cu  pairwise_dist.cuh
backups/backup_2/: pairwise_dist.cu  pairwise_dist.h
backups/backup_3/: pairwise_dist.cu  pairwise_dist.h
backups/namespace_dll/: pairwise_dist.cu  pairwise_dist.cuh
header/: CUDA_functions.cuh  CUDA_functions.h  Configuration.h  Controller.h  Convert.h  Defines.cuh  Defines.h  NOMAD_Evaluator_singleobj.h  Population_trackers.h  RandomDevice.h  Utilities.cuh  Worker.h  infection.h  io_blackbox_functions.h  io_utilities.h  kernels.cuh  mainwindow.h  motion.h  path_planning.h  simulation.h  tic_toc.h  utilities.h  visualizer.h
libs/: CUDA_functions.lib  CUDA_functions_d.lib
opt/: GA_call.m  GA_experiment.m  NOMAD_experiment.py  StoMADS_call.m  StoMADS_experiment.m  StoMADS_experiment.py  V2_StoMADS_PB.m  command.txt  configuration.ini  process_results.py  process_results_presentation.py  run_COVID_optimization_V2.m  run_GA.m  run_StoMADS.m
opt/GA/: Evaluate_generation.m  Initialize_pop.m  build_fig.m  callback_function.m  eval_matrix.m  eval_matrix_success.m  function_cstr.m  function_obj.m  get_updated_estimates.m  log_generation.m
opt/MATLAB_blackbox/: Blackbox_call.m  Blackbox_call_CovidSim.m  covid_V2_one.m  covid_V2_two.m  v_deux_Sto_Param.m
opt/StoMADS_V2/: Det_bb_call.m  Det_black_box.m  Poll.m  black_box.m  cosin_vec.m  crescent.m  eval_matrix.m  eval_matrix_success.m  get_updated_estimates.m  h.m  log_incumbent.m  order_last.m  pentagon.m  snake.m  v_deux_black_box.m
opt/covid_sim/param_files/: key.txt  p_PC7_CI_HQ_SD_duration.txt
post/: DynamicProfiles_deterministic.py  DynamicProfiles_realizations.py  DynamicProfiles_stochastic.py  DynamicProfiles_stochastic_CovidSim.py  MCS_model_LHS.py  MCS_model_points.py  MCS_model_points_CovidSim.py  Statistics_summary_LHS_points.py  Visualize_CovSim.m  Visualize_LHS_points.py  Visualize_design_space.py  Visualize_model_points.py  configuration.ini  configuration_debug.ini  create_movie_CovidSim.m
post/covid_sim/param_files/: p_PC7_CI_HQ_SD_V2.txt  preUK_R0=2.0.txt
post/functionsDOE/: blackbox_CovidSim.py  blackboxes.py
post/functionsDesignSpace/: stats_functions.py  visualization.py
post/functionsDynamics/: statsStochastic.py  visDeterministic.py  visStochastic.py
post/functionsUtilities/: utils.py
qss/: darkorange.stylesheet.qss
src/: COVID_opt_main.cpp  CUDA_functions.cu  CUDA_main.cu  Configuration.cpp  Controller.cpp  Convert.cpp  NOMAD_Evaluator_singleobj.cpp  Population_trackers.cpp  RandomDevice.cpp  Utilities.cu  Worker.cpp  covidsim.cpp  covidsim_ui.cpp  infection.cpp  io_blackbox_functions.cpp  io_utilities.cpp  kernels.cu  main.cpp  mainwindow.cpp  motion.cpp  path_planning.cpp  simulation.cpp  utilities.cpp  visualizer.cpp
visual_studio/: COVID_SIM_UI.pro  COVID_SIM_UI.sln  COVID_SIM_UI.vcxproj  COVID_SIM_UI.vcxproj.filters  COVID_SIM_UI_CUDA.sln  COVID_opt.sln  COVID_opt.vcxproj  COVID_opt.vcxproj.filters  COVID_sim_lib.sln  COVID_sim_lib.vcxproj  COVID_sim_lib.vcxproj.filters  CUDA_functions.sln.nvsettings  CUDA_functions.vcxproj  CUDA_functions.vcxproj.filters  mainwindow.ui
